fix image position on tablet view: contained

--- a/src/content1_topic3.css
+++ b/src/content1_topic3.css
@@ -237,7 +237,8 @@ body {
 
   .content1topic3-img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
   }
 
   .content1topic3-arrows-bottom {
