--- a/src/subtopic1/subtopic1.css
+++ b/src/subtopic1/subtopic1.css
@@ -237,7 +237,8 @@ body {
 
   .subtopic1-img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
   }
 
   .subtopic1-arrows-bottom {
