--- a/src/subtopic3/subtopic3.css
+++ b/src/subtopic3/subtopic3.css
@@ -237,7 +237,8 @@ body {
 
   .subtopic3-img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
   }
 
   .subtopic3-arrows-bottom {
