--- a/src/subtopic4/subtopic4.css
+++ b/src/subtopic4/subtopic4.css
@@ -237,7 +237,8 @@ body {
 
   .subtopic4-img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
   }
 
   .subtopic4-arrows-bottom {
