--- a/src/topic1/topic1.css
+++ b/src/topic1/topic1.css
@@ -243,7 +243,8 @@ body {
 
   .topic1-img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
   }
 
   .topic1-arrows-bottom {
