--- a/src/topic4/topic4.css
+++ b/src/topic4/topic4.css
@@ -237,7 +237,8 @@ body {
 
   .topic4-img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
   }
 
   .topic4-arrows-bottom {
